# authorization-system

./: .gitignore  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  init-test-db.sh  postgres_exporter.yml  prometheus.yml  pyproject.toml  pytest.ini  setup.py
app/: __init__.py  main.py
app/core/: __init__.py  cache.py  circuit_breaker.py  config.py  exceptions.py  permissions.py  rate_limiter.py  retry.py  security.py  validation.py
app/db/: database.py  init_db.py  session.py  verify_schema.py
app/middleware/: error_handler.py  performance.py  security.py
app/models/: errors.py  security.py  token.py  user.py
app/monitoring/: db_metrics.py  token_metrics.py
app/routes/: admin_routes.py  user_routes.py
app/schemas/: user.py
app/services/: audit_service.py  auth_service.py  cleanup_service.py  email_service.py  password_service.py  role_service.py  token_service.py  user_service.py
app/utils/: password.py
docs/: PRD.md  Project-plan.md
scripts/: run_tests.sh
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  roles.py  tokens.py  users.py  validation.py
tests/integration/: test_concurrency.py  test_network_errors.py  test_user_flow.py  test_user_routes.py
tests/performance/: test_caching.py  test_load.py  test_load_parameterized.py
tests/resilience/: test_circuit_breaker.py
tests/security/: test_security.py
tests/unit/: test_auth_service.py  test_critical_components.py  test_middleware.py  test_performance_middleware.py  test_permissions.py  test_security_model.py  (+1 more)
(+6 files in other folders)
